V1_create_device_info_table.sql
V2_create_cases_table.sql