@@ -59,7 +59,7 @@ class SqliteDataStore implements DataStore {
 	@Override
 	public List<Case> listCases() {
 		sql.rows("select * from cases").collect { row ->
-			new Case([id: row.guid, name: row.name, phone: row.phone, age: row.age, gender: row.gender, preferredDialect: row.dialect, reasons: new JsonSlurper().parseText(row.reasons), notes: row.notes, sick: row.sick])
+			new Case([id: row.guid, name: row.name, phone: row.phone, age: row.age, gender: row.gender, preferredDialect: row.dialect, reasons: new JsonSlurper().parseText(row.reasons), notes: row.notes, sick: row.sick, synced: row.synced])
 		}
 	}
 
@@ -78,5 +78,17 @@ class SqliteDataStore implements DataStore {
 	@Override
 	public void registerDeviceInfoSynced() {
 		sql.execute("update device_info set registered = ${true}")
+	}
+	
+	@Override
+	public List<Case> unsyncedCases() {
+		sql.rows("select * from cases where synced = ${false}").collect { row ->
+			new Case([id: row.guid, name: row.name, phone: row.phone, age: row.age, gender: row.gender, preferredDialect: row.dialect, reasons: new JsonSlurper().parseText(row.reasons), notes: row.notes, sick: row.sick, synced: row.synced])
+		}
+	}
+
+	@Override
+	public void registerCaseSynced(String guid) {
+		sql.execute("update cases set synced = ${true} where guid = ${guid}")
 	}
 }
