@@ -104,6 +104,11 @@ class RsyncSynchronizer implements DocumentSynchronizer {
 				println "Uploaded ${filename}"
 				if (filename == "device.json") {
 					dataStore.registerDeviceInfoSynced()
+				} else {
+					def caseMatcher = filename =~ /case-(.+)\.json/
+					if (caseMatcher.matches()) {
+						dataStore.registerCaseSynced(caseMatcher[0][1])
+					}
 				}
 			}
 		})
