@@ -1,2 +1,3 @@
 V1_create_device_info_table.sql
 V2_create_cases_table.sql
+V3_added_cases_synced_field.sql
